--- a/views/partial/story.ejs
+++ b/views/partial/story.ejs
@@ -1,4 +1,3 @@
-<!-- 故事卡片将通过API动态加载 -->
 <% storyList.forEach(function(story){ %>
 <article class="content-card">
      <div class="card-info">
@@ -15,10 +14,9 @@
  </article>
  <% }); %>
 
- <!-- 分页 -->
 <noscript>
   <% for(let i = 2; i <= totalPages; i++) { %>
-      <a href="/list/<%=activeCategoryId%>/<%= i %>">第 <%= i %> 页</a>
+      <a href="/story/list/<%=activeCategoryId%>/<%= i %>">第 <%= i %> 页</a>
   <% } %>
 </noscript>
 
