--- a/views/index.ejs
+++ b/views/index.ejs
@@ -71,7 +71,7 @@
                         <% categoryList.forEach(function(category){ %>
                             <% const isActive = category.id == activeCategoryId; %>
                             <li class="filter-tag <%= isActive ? 'active' : '' %> category-link">
-                                <a class="tag-text" href="/list/<%=category.id%>/1" data-id="<%= category.id %>"><%=category.name %></a>
+                                <a class="tag-text" href="/story/list/<%=category.id%>/1" data-id="<%= category.id %>"><%=category.name %></a>
                              </li>
                         <% }); %>
                     </ul>
@@ -90,7 +90,7 @@
                 <article class="content-card">
                      <div class="card-info">
                          <span class="card-category"><%=story.category_name %></span>
-                         <h3 class="card-title"><%=story.title %></h3>
+                         <h3 class="card-title"><a href='/story/<%=story.id %>' target=‘_blank’><%=story.title %></a></h3>
                          <p class="card-excerpt"><%=story.excerpt %></p>
                          <div class="card-meta">
                              <div class="account-name"><%=story.category_name %></div>
@@ -105,7 +105,7 @@
                  <!-- 分页 -->
                  <noscript>
                      <% for(let i = 2; i <= totalPages; i++) { %>
-                         <a href="/list/<%=activeCategoryId%>/<%= i %>">第 <%= i %> 页</a>
+                         <a href="/story/list/<%=activeCategoryId%>/<%= i %>">第 <%= i %> 页</a>
                      <% } %>
                  </noscript>
             </div>
