--- a/views/index.ejs
+++ b/views/index.ejs
@@ -52,15 +52,26 @@
                                 <i class="fas fa-sync-alt"></i>
                                 <span>重置刷新</span>
                             </div>
-                            <div class="action-button" id="categorySettingsButton">
-                                <i class="fas fa-sliders-h"></i>
-                                <span>分类设置</span>
-                            </div>
-                            <div class="action-button" id="searchButton">
-                                <i class="fas fa-search"></i>
-                                <span>故事搜索</span>
-                            </div>
+<!--                             <div class="action-button" id="categorySettingsButton"> -->
+<!--                                 <i class="fas fa-sliders-h"></i> -->
+<!--                                 <span>分类设置</span> -->
+<!--                             </div> -->
+<!--                             <div class="action-button" id="searchButton"> -->
+<!--                                 <i class="fas fa-search"></i> -->
+<!--                                 <span>故事搜索</span> -->
+<!--                             </div> -->
                         </div>
+                    </div>
+
+                    <div class="action-button" id="categorySettingsButton">
+                        <i class="fas fa-sliders-h"></i>
+                        <span>分类设置</span>
+                    </div>
+
+
+                    <div class="action-button" id="searchButton">
+                        <i class="fas fa-search"></i>
+                        <span>故事搜索</span>
                     </div>
                 </div>
 
@@ -83,6 +94,7 @@
 
     <!-- 主内容区域 -->
     <main class="main-container" id="mainContainer">
+    <div class='container'>
         <div class="content-grid" id="storyGrid">
             <!-- 故事卡片将通过动态加载 -->
             <% storyList.forEach(function(story){ %>
@@ -108,16 +120,19 @@
                  <% } %>
              </noscript>
         </div>
+        </div>
     </main>
 
     <!-- 页面遮罩 -->
-    <div class="loading-overlay" id="loadingOverlay">
-        <div class="loading-balls">
-            <div></div>
-            <div></div>
-            <div></div>
+     <div class="loading-overlay" id="loadingOverlay">
+        <div class="loading-content">
+            <div class="bouncing-loader">
+                <div></div>
+                <div></div>
+                <div></div>
+            </div>
         </div>
-    </div>
+     </div>
 
     <script src="/javascripts/main.js"></script>
   </body>
