--- a/views/index.ejs
+++ b/views/index.ejs
@@ -67,7 +67,7 @@
 
                     <div class="action-button" id="searchButton">
                         <i class="fas fa-search"></i>
-                        <span>故事搜索</span>
+                        <span><a href='/story/search/page/name'>故事搜索</a></span>
                     </div>
                 </div>
 
