--- a/views/search.ejs
+++ b/views/search.ejs
@@ -34,5 +34,50 @@
         <script type="text/javascript">
             loadlive2d("live2d", "/live2d/model/xiaoban/model.json");
         </script>
+        <script>
+
+            let currentState = {
+                searchKeyword: '',
+            }
+
+            document.addEventListener('DOMContentLoaded', () => {
+                document.getElementById('searchClose').addEventListener('click', closeSearchBox);
+                toggleSearchBox();
+            });
+
+            function toggleSearchBox() {
+                const searchBox = document.getElementById('floatingSearch');
+                const searchInput = document.getElementById('searchInput');
+                if(currentState.searchKeyword){
+                    searchInput.value = currentState.searchKeyword;
+                }
+                if (!searchBox.classList.contains('active')) {
+                    searchBox.classList.add('active');
+                    document.body.classList.add('modal-open');
+                    // 延迟聚焦以等待过渡动画完成
+                    setTimeout(() => {
+                        searchInput.focus();
+                    }, 300);
+                }
+            }
+
+            function closeSearchBox() {
+
+                window.history.back();
+
+//                 const searchBox = document.getElementById('floatingSearch');
+//                 const searchInput = document.getElementById('searchInput');
+//
+//                 searchBox.classList.remove('active');
+//                 document.body.classList.remove('modal-open');
+//                 searchInput.value = '';
+            }
+
+//             window.addEventListener('popstate', async () => {
+//                 const res = await fetch(location.pathname, { headers: { 'X-Partial': 'true' } });
+//                 const html = await res.text();
+//                 document.querySelector('#storyGrid').innerHTML = html;
+//             });
+        </script>
     </body>
  </html>
