--- a/views/index.ejs
+++ b/views/index.ejs
@@ -80,14 +80,6 @@
                                 <i class="fas fa-sync-alt"></i>
                                 <span>重置刷新</span>
                             </div>
-<!--                             <div class="action-button" id="categorySettingsButton"> -->
-<!--                                 <i class="fas fa-sliders-h"></i> -->
-<!--                                 <span>分类设置</span> -->
-<!--                             </div> -->
-<!--                             <div class="action-button" id="searchButton"> -->
-<!--                                 <i class="fas fa-search"></i> -->
-<!--                                 <span>故事搜索</span> -->
-<!--                             </div> -->
                         </div>
                     </div>
 
@@ -130,7 +122,7 @@
                     <article class="content-card">
                          <div class="card-info">
                              <span class="card-category"><%=story.category_name %></span>
-                             <h3 class="card-title"><a href='/story/<%=story.id %>' target=‘_blank’><%=story.title %></a></h3>
+                             <h3 class="card-title"><a href='/story/<%=story.id %>' target='_blank'><%=story.title %></a></h3>
                              <p class="card-excerpt"><%=story.excerpt %></p>
                              <div class="card-meta">
                                  <div class="account-name"><%=story.category_name %></div>
